# capstone-basic

./: CMakeLists.txt  REAME.md
src/: aht20.cpp  aht20.h  bmp180.cpp  bmp180.h  i2c.cpp  i2c.h  linux_i2c.cpp  linux_i2c.h  main.cpp  ssd1306.cpp  ssd1306.h  ssd1306_1.cpp  ssd1306_1.h
src/app/: CMakeLists.txt  main.cpp
src/device/: CMakeLists.txt
src/device/include/: font.h  i2c.h  ssd1306.h
src/device/sensor/: ssd1306.cpp
src/test/: CMakeLists.txt
src/test/aht20/: CMakeLists.txt
src/test/aht20/src/: main.cpp
src/test/bmp180/: CMakeLists.txt
src/test/bmp180/src/: main.cpp
src/test/hello/: CMakeLists.txt
src/test/hello/src/: main.cpp
src/test/ssd1306/: CMakeLists.txt
src/test/ssd1306/src/: main.cpp
